PatientAPI/k8s/patient-service.yml
apiVersion: v1
kind: Service
metadata:
  name: patient-api-service
  namespace: default
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port:   "80"
spec:
  selector:
    app: patient-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
