PatientAPI/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: patient-api-service
spec:
  selector:
    app: patient-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
